--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #ff5b6e;
+  color: #fc005c;
 }
 p {
   font-size: 14px;
@@ -28,13 +28,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #ff5b6e;
+  color: #fc005c;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #e20052;
 }
 h1,
 h2,
@@ -57,8 +57,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #ff5b6e;
-  border-color: #ff5b6e;
+  background-color: #fc005c;
+  border-color: #fc005c;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -69,8 +69,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #e20052;
+  border-color: #d6004d;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -92,17 +92,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #ff5b6e;
-  border-color: #ff5b6e;
+  background-color: #fc005c;
+  border-color: #fc005c;
 }
 .btn-primary .badge {
-  color: #ff5b6e;
+  color: #fc005c;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #ff5b6e;
-  border-color: #ff5b6e;
+  background-color: #fc005c;
+  border-color: #fc005c;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -116,8 +116,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #e20052;
+  border-color: #d6004d;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -139,11 +139,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #ff5b6e;
-  border-color: #ff5b6e;
+  background-color: #fc005c;
+  border-color: #fc005c;
 }
 .btn-xl .badge {
-  color: #ff5b6e;
+  color: #fc005c;
   background-color: white;
 }
 .navbar-custom {
@@ -151,21 +151,21 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #ff5b6e;
+  color: #fc005c;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: #e20052;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #ff5b6e;
-  border-color: #ff5b6e;
+  background-color: #fc005c;
+  border-color: #fc005c;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -173,7 +173,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #ff5b6e;
+  background-color: #fc005c;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -184,18 +184,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #ff5b6e;
+  color: #fc005c;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #ff5b6e;
+  background-color: #fc005c;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #e20052;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -421,7 +421,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #ff5b6e;
+  background-color: #fc005c;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -576,7 +576,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #ff5b6e;
+  border-color: #fc005c;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -645,7 +645,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #ff5b6e;
+  background-color: #fc005c;
 }
 .btn:focus,
 .btn:active,
@@ -729,11 +729,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #ff5b6e;
+  background: #fc005c;
 }
 ::selection {
   text-shadow: none;
-  background: #ff5b6e;
+  background: #fc005c;
 }
 img::selection {
   background: transparent;
@@ -742,5 +742,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #ff5b6e;
+  webkit-tap-highlight-color: #fc005c;
 }
